--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,18 +14,6 @@ orbs:
 #           cache-key: yarn.lock
 
 jobs:
-  lint-and-test:
-    executor:
-      name: node/default
-    steps:
-      - checkout
-      - run:
-          name: Lint
-          command: yarn lint
-      - run:
-          name: Run tests
-          command: yarn test
-          jobs:
   build:
     machine: true
     steps:
@@ -34,4 +22,4 @@ jobs:
 workflows:
   run-ci:
     jobs:
-      - lint-and-test
+      - build
