adding docker container

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ orbs:
 jobs:
   build:
     machine: true
+    - setup_remote_docker:
+        version: 19.03.13
     steps:
       - run: docker build --tag  because-i-am-hapi .
 
