--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,7 @@
-version: 2.1
-
-orbs:
-  node: circleci/node@2.0.3
-
-# commands:
-#   setup-node-and-yarn-install-with-cache:
-#     steps:
-#       - node/install:
-#           install-yarn: true
-#           node-version: latest
-#       - node/install-packages:
-#           pkg-manager: yarn
-#           cache-key: yarn.lock
-
+version: 2
 jobs:
   build:
     machine: true
     steps:
-      - setup_remote_docker:
-          version: 19.03.13
+      - checkout
       - run: docker build --tag  because-i-am-hapi .
-
-workflows:
-  run-ci:
-    jobs:
-      - build
