--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,3 +5,6 @@ jobs:
     steps:
       - checkout
       - run: docker build --tag  because-i-am-hapi .
+      - run: |
+          docker run --init --rm --publish 3000:3000 because-i-am-hapi
+          docker exec because-i-am-hapi --retry 10 --retry-connrefused http://localhost:3000
