--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run: docker build --tag because-i-am-hapi .
-      - run: |
-        docker run -d --name because-i-am-hapi because-i-am-hapi
-        docker exec because-i-am-hapi --retry 10 --retry-connrefused http://localhost:8080
+      - run: docker build --tag  because-i-am-hapi .
+      - run: docker run -d --name because-i-am-hapi because-i-am-hapi --publish 3000:3000
+      - run: docker exec because-i-am-hapi --retry 10 --retry-connrefused http://localhost:3000
