adding docker container

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,6 @@ jobs:
     steps:
       - checkout
       - run: docker build --tag  because-i-am-hapi .
-      - run: docker run -d --name because-i-am-hapi because-i-am-hapi --publish 3000:3000
-      - run: docker exec because-i-am-hapi --retry 10 --retry-connrefused http://localhost:3000
+      - run: |
+          docker run -d --name because-i-am-hapi because-i-am-hapi --publish 3000:3000
+          docker exec because-i-am-hapi --retry 10 --retry-connrefused http://localhost:3000
