--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     machine: true
     steps:
       - checkout
+      - run: docker build --tag  because-i-am-hapi .
       - run: |
-          docker build --tag  because-i-am-hapi .
           docker run -d --name because-i-am-hapi because-i-am-hapi
-          docker exec because-i-am-hapi curl --retry 10 --retry-connrefused http://localhost:3000
+          docker exec because-i-am-hapi curl --retry 10 --retry-connrefused http://localhost:3000 sh
