--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,5 @@ jobs:
       - checkout
       - run: docker build --tag  because-i-am-hapi .
       - run: |
-          docker run -d --name because-i-am-hapi because-i-am-hapi
+          docker run -d -p 3000:3000 --name because-i-am-hapi because-i-am-hapi
           docker exec because-i-am-hapi curl --retry 10 --retry-connrefused http://localhost:3000
